test/integration/bad/unicode/invalid-character.stan
data {
  // not in XID data
  real ℧;
}
